package com.example.asproj;

import com.example.common.uicomponent.HiBaseApplication;

public class HiApplication extends HiBaseApplication {

    @Override
    public void onCreate() {
        super.onCreate();
    }
}
