package com.example.asproj.fragment;

import com.example.asproj.R;
import com.example.common.uicomponent.HiBaseFragment;

public class FavoriteFragment  extends HiBaseFragment {
    @Override
    public int getLayoutId() {
        return R.layout.fragment_favorite;
    }
}
