package com.example.asproj.fragment;

import com.example.asproj.R;
import com.example.common.uicomponent.HiBaseFragment;

public class HomePageFragment extends HiBaseFragment {
    @Override
    public int getLayoutId() {
        return R.layout.fragment_home;
    }
}
