@startuml

title __ASPROJ.APP's Class Diagram__\n

  namespace com.example.asproj {
    class com.example.asproj.BuildConfig {
    }
  }
  

  namespace com.example.asproj {
    class com.example.asproj.HiApplication {
    }
  }
  

  namespace com.example.asproj {
    class com.example.asproj.MainActivity {
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.CategoryFragment {
      }
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.FavoriteFragment {
      }
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.HomePageFragment {
      }
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.ProfileFragment {
      }
    }
  }
  

  namespace com.example.asproj {
    namespace fragment {
      class com.example.asproj.fragment.RecommendFragment {
      }
    }
  }
  

  namespace com.example.asproj {
    namespace logic {
      class com.example.asproj.logic.MainActivityLogic {
      }
    }
  }
  

  com.example.asproj.HiApplication -up-|> com.example.common.uicomponent.HiBaseApplication
  com.example.asproj.MainActivity .up.|> com.example.asproj.logic.MainActivityLogic.ActivityProvider
  com.example.asproj.MainActivity -up-|> com.example.common.uicomponent.HiBaseActivity
  com.example.asproj.MainActivity o-- com.example.asproj.logic.MainActivityLogic : activityLogic
  com.example.asproj.fragment.CategoryFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.fragment.FavoriteFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.fragment.HomePageFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.fragment.ProfileFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.fragment.RecommendFragment -up-|> com.example.common.uicomponent.HiBaseFragment
  com.example.asproj.logic.MainActivityLogic o-- com.example.asproj.logic.MainActivityLogic.ActivityProvider : activityProvider
  com.example.asproj.logic.MainActivityLogic o-- com.example.common.tab.HiFragmentTabView : fragmentTabView
  com.example.asproj.logic.MainActivityLogic o-- com.example.hi_ui.ui.tab.bottom.HiTabBottomLayout : hiTabBottomLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
